--- a/HUSLSwift.xcodeproj/xcshareddata/xcschemes/HUSLMac.xcscheme
+++ b/HUSLSwift.xcodeproj/xcshareddata/xcschemes/HUSLMac.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0700"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,37 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB37B9041B2E7994009E63A5"
-               BuildableName = "HUSLSwiftiOS.framework"
-               BlueprintName = "HUSLSwiftiOS"
+               BlueprintIdentifier = "CBDA801B1B2D2C740010C653"
+               BuildableName = "HUSLSwift.framework"
+               BlueprintName = "HUSLMac"
+               ReferencedContainer = "container:HUSLSwift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CB98BFB31B307B070027506A"
+               BuildableName = "HUSLTests.xctest"
+               BlueprintName = "HUSLTests"
+               ReferencedContainer = "container:HUSLSwift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CB6AB27E1B3083890075AF04"
+               BuildableName = "HUSLMacTests.xctest"
+               BlueprintName = "HUSLMacTests"
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,15 +54,30 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
       buildConfiguration = "Debug">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB37B90D1B2E7994009E63A5"
-               BuildableName = "HUSLSwiftiOSTests.xctest"
-               BlueprintName = "HUSLSwiftiOSTests"
+               BlueprintIdentifier = "CB98BFB31B307B070027506A"
+               BuildableName = "HUSLTests.xctest"
+               BlueprintName = "HUSLTests"
+               ReferencedContainer = "container:HUSLSwift.xcodeproj">
+            </BuildableReference>
+            <LocationScenarioReference
+               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+               referenceType = "1">
+            </LocationScenarioReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CB6AB27E1B3083890075AF04"
+               BuildableName = "HUSLMacTests.xctest"
+               BlueprintName = "HUSLMacTests"
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +85,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CB37B9041B2E7994009E63A5"
-            BuildableName = "HUSLSwiftiOS.framework"
-            BlueprintName = "HUSLSwiftiOS"
+            BlueprintIdentifier = "CBDA801B1B2D2C740010C653"
+            BuildableName = "HUSLSwift.framework"
+            BlueprintName = "HUSLMac"
             ReferencedContainer = "container:HUSLSwift.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,9 +107,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CB37B9041B2E7994009E63A5"
-            BuildableName = "HUSLSwiftiOS.framework"
-            BlueprintName = "HUSLSwiftiOS"
+            BlueprintIdentifier = "CBDA801B1B2D2C740010C653"
+            BuildableName = "HUSLSwift.framework"
+            BlueprintName = "HUSLMac"
             ReferencedContainer = "container:HUSLSwift.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,9 +125,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CB37B9041B2E7994009E63A5"
-            BuildableName = "HUSLSwiftiOS.framework"
-            BlueprintName = "HUSLSwiftiOS"
+            BlueprintIdentifier = "CBDA801B1B2D2C740010C653"
+            BuildableName = "HUSLSwift.framework"
+            BlueprintName = "HUSLMac"
             ReferencedContainer = "container:HUSLSwift.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
