--- a/HUSLSwift.xcodeproj/xcshareddata/xcschemes/HUSLMac.xcscheme
+++ b/HUSLSwift.xcodeproj/xcshareddata/xcschemes/HUSLMac.xcscheme
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0700"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -28,9 +28,9 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB98BFB31B307B070027506A"
-               BuildableName = "HUSLTests.xctest"
-               BlueprintName = "HUSLTests"
+               BlueprintIdentifier = "CB6AB27E1B3083890075AF04"
+               BuildableName = "HUSLMacTests.xctest"
+               BlueprintName = "HUSLMacTests"
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,9 +42,9 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB6AB27E1B3083890075AF04"
-               BuildableName = "HUSLMacTests.xctest"
-               BlueprintName = "HUSLMacTests"
+               BlueprintIdentifier = "CB98BFB31B307B070027506A"
+               BuildableName = "HUSLTests.xctest"
+               BlueprintName = "HUSLTests"
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -66,10 +66,6 @@
                BlueprintName = "HUSLTests"
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
-            <LocationScenarioReference
-               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
-               referenceType = "1">
-            </LocationScenarioReference>
          </TestableReference>
          <TestableReference
             skipped = "NO">
