--- a/HUSLSwift.xcworkspace/xcshareddata/xcschemes/HUSLiOS.xcscheme
+++ b/HUSLSwift.xcworkspace/xcshareddata/xcschemes/HUSLiOS.xcscheme
@@ -4,7 +4,7 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -20,20 +20,6 @@
                ReferencedContainer = "container:HUSLSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB6AB2A01B308A6F0075AF04"
-               BuildableName = "HUSLiOSTests.xctest"
-               BlueprintName = "HUSLiOSTests"
-               ReferencedContainer = "container:HUSLSwift.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -42,16 +28,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB98BFB31B307B070027506A"
-               BuildableName = "HUSLTests.xctest"
-               BlueprintName = "HUSLTests"
-               ReferencedContainer = "container:HUSLSwift.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
