--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_project: HUSLSwift.xcodeproj
-xcode_scheme: HUSLMac
-xcode_sdk: macosx10.11
+env:
+  matrix:
+    - SCHEME=HUSLMac ARCH=x86_64 TEST_SDK=macosx10.11
+    - SCHEME=HUSLiOS ARCH=arm64 TEST_SDK=iphonesimulator9.3
+script:
+  - xctool -scheme $SCHEME -arch $ARCH test -test-sdk $TEST_SDK
