--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ env:
     - SCHEME=HUSLMac ARCH=x86_64 TEST_SDK=macosx10.11
     - SCHEME=HUSLiOS ARCH=arm64 TEST_SDK=iphonesimulator9.3
 script:
-  - xctool -scheme $SCHEME -arch $ARCH test -test-sdk $TEST_SDK
+  - xctool -scheme $SCHEME -arch $ARCH test -test-sdk $TEST_SDK  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
