--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode7.2
 env:
   matrix:
-    - SCHEME=HUSLMac ARCH=x86_64 TEST_SDK=macosx10.11
-    - SCHEME=HUSLiOS ARCH=arm64 TEST_SDK=iphonesimulator9.3
+    - SCHEME=HUSLMac TEST_SDK=macosx10.11
+    - SCHEME=HUSLiOS TEST_SDK=iphonesimulator
 script:
-  - xctool -scheme $SCHEME -arch $ARCH test -test-sdk $TEST_SDK  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+  - xctool -scheme $SCHEME test -test-sdk $TEST_SDK CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
