--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: objective-c
-osx_image: xcode7.2
+osx_image: xcode8.2
 env:
+  global:
+    - IOS_SDK=iphonesimulator10.2
+    - OSX_SDK=macosx10.12
   matrix:
-    - SCHEME=HUSLMac TEST_SDK=macosx10.11
-    - SCHEME=HUSLiOS TEST_SDK=iphonesimulator
+    - SCHEME=HUSLMac TEST_SDK=$OSX_SDK DESTINATION="arch=x86_64"
+    - SCHEME=HUSLiOS TEST_SDK=$IOS_SDK DESTINATION="OS=10.2,platform=iOS Simulator,id=DB794781-65A7-4884-8D00-AAC3CBD39A44"
 script:
-  - xctool -scheme $SCHEME test -test-sdk $TEST_SDK CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  - xcodebuild -scheme "$SCHEME" -sdk "$TEST_SDK" -destination "$DESTINATION" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO test | xcpretty -c
