--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     - OSX_SDK=macosx10.15
   matrix:
     - SCHEME=HSLuvMac TEST_SDK=$OSX_SDK DESTINATION="arch=x86_64"
-    - SCHEME=HSLuviOS TEST_SDK=$IOS_SDK DESTINATION="OS=13.2,platform=iOS Simulator,id=8CD72926-1BD5-41EB-9045-03A9239A822F"
+    - SCHEME=HSLuviOS TEST_SDK=$IOS_SDK DESTINATION="platform=iOS Simulator,id=19DC985B-F1BB-498F-9403-008549F26EF0,OS=13.2.2"
 script:
   - set -o pipefail
   - xcodebuild -version
