--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: Test
 
 on:
   - workflow_dispatch
-  - pull_request
   - push
 
 jobs:
@@ -10,7 +9,7 @@ jobs:
     runs-on: macos-13
     strategy:
       matrix:
-        params: [ '-scheme HSLuvMac -sdk macosx', '-scheme HSLuviOS -sdk iphonesimulator -destination "platform=iOS Simulator,name:iPhone 14"' ]
+        params: [ '-scheme HSLuvMac -sdk macosx', '-scheme HSLuviOS -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 14"' ]
     steps:
       - uses: actions/checkout@v4
       # https://github.com/actions/runner-images/discussions/8367#discussioncomment-12685592
